just before doing pages controller

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,5 @@
 <h1>My Wish List</h1>
+
+<%= link_to 'List of places', controller: 'places' %>
+<br/>
+<%= link_to 'Helpful links', controller: 'places' %>
