--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
 <h1>My Wish List</h1>
 
+<%= link_to 'About', static_pages_about_path %>
+
 <%= link_to 'List of places', controller: 'places' %>
 <br/>
-<%= link_to 'Helpful links', controller: 'places' %>
+<%= link_to 'Helpful links', static_pages_useful_stuff_path %>
