--- a/app/views/static_pages/useful_stuff.html.erb
+++ b/app/views/static_pages/useful_stuff.html.erb
@@ -1,3 +1,3 @@
 <h1>Useful Stuff for Planning Trips</h1>
-<a href="https://www.airbnb.com/">Airbnb<a>	
-
+<div>Links will open in a new tab</div>
+<a target="_blank" href="https://www.airbnb.com/">Airbnb<a>	
